# tcalc

./: LICENSE.txt  README.md  pyproject.toml
grammer/: tcalc.lark
tcalc/: core.py  main.py  parser.py  time.py
