[tool.poetry]
name = "tcalc"
version = "0.1.0"
description = "Time calculator"
authors = ["takatoh <takatoh.m@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
lark = "^1.1.9"


[[tool.poetry.source]]
name = "pypilocal"
url = "http://pypilocal/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
tcalc = "tcalc.main:main"
